--- a/gourmet/static/kitchen/index.css
+++ b/gourmet/static/kitchen/index.css
@@ -1,111 +1,97 @@
-@import url(https://fonts.googleapis.com/css?family=Quicksand:300,400|Lato:400,300|Coda|Open+Sans);
 body {
-  color: white;
-  overflow-x:hidden;
-  font-family: "Open sans", sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+}
+
+header {
+  padding: 20px 0;
+}
+
+header .row,
+footer .row {
+  display: flex;
+  align-items: center;
+}
+
+header h1 {
+  font-weight: 700;
   margin: 0;
-  padding: 0;
-  max-width: 100vw;
-  background: #159957;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #155799, #159957);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #155799, #159957); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-h1{
-	margin: 0;
-	padding: 30px;
-  text-align: center;
-  font-size:70px;
-  color: rgba(0,0,0);
+header nav {
+  display: flex;
+  justify-content: flex-end;
 }
 
-.logButtons{
-  width: 60%;
-  margin-left:20%;
-  margin-right:20%;
+header p {
+  padding: 0 20px;
+  margin: 0;
 }
 
-
-}
-.center-block {
-   margin-left:auto;
-   margin-right:auto;
-   display:block;
-}
-.logBut{
-  margin-top: 150px;
-  margin-bottom: 30px;
+.jumbotron {
+  display: flex;
+  align-items: center;
+  background-size: cover;
+  color: #ffffff;
+  height: 500px;
+  text-shadow: 0.25px 0.25px 0.25px #000000;
 }
 
-.signBut{
-  margin-top: 20px;
+.jumbotron h2 {
+  font-size: 60px;
+  font-weight: 700;
+  margin: 0;
+  color: #ffffff;
 }
 
-.labelsLogin{
-  color:black;
+.jumbotron h3 {
+  margin: 0 0 20px;
+  color: #ffffff;
 }
 
-.someLabels{
-  width: 40px;
-  text-align: center;
+section .row img {
+  margin: 0 0 30px;
+  width: 100%;
 }
 
-.modal-body{
-  background: rgba(168, 243, 255, 0.75);
-}
-.modal-backdrop
-{
-    opacity:0.8 !important;
+.col-md-6 {
+  margin: 0 0 30px;
 }
 
-.topChef{
-  margin-right: 20px;
-}
-.topRecipie{
-  margin-right: 0;
-}
-.toppers{
-  max-height: 70%;
-  margin-left: 40px;
-  margin-top: 30px;
-  margin-bottom: auto;
+.btn.btn-primary {
+  border-radius: 2px;
+  border: 0px;
+  color: #fbd1d5;
+  text-shadow: none;
+  background-color: #ffffff;
 }
 
-.headRec{
-  text-align: center;
-  color: black;
-  font-size: 35px;
+.btn.btn-primary:hover {
+  color: #ffffff;
+  background-color: #fbd1d5;
 }
 
-.recName, .chefName{
-  color:black;
-  text-align: center;
+.btn-secondary {
+  background-color: #E8DFE0;
+  color: #ffffff;
+  margin: 0 0 30px;
 }
 
-
-.headChef{
-  color: black;
-  text-align: center;
-  font-size: 35px;
+footer {
+  font-size: 12px;
+  padding: 20px 0;
 }
 
-@media (min-width: 992px){
-.logButtons{
-  width: 80%;
-  margin-left:16%;
-}
+footer .col-sm-8 {
+  display: flex;
+  justify-content: flex-end;
 }
 
-.allCol{
-  margin-bottom: 30px;
+footer ul {
+  list-style: none;
 }
 
-#errorMessageLogin{
-  color: red;
-  font-size: 1.2em;
-}
-
-#errorMessageSignup{
-  color: red;
-  font-size: 1.2em;
+footer li img {
+  width: 32px;
+  height: 32px;
 }
