--- a/gourmet/templates/kitchen/edit_rec.html
+++ b/gourmet/templates/kitchen/edit_rec.html
@@ -1,169 +1,103 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Edit Recipe</title>
-	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-	<script  src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="new_res.css">
-</head>
-<body>
-	<nav class="navbar navbar-default">
-		<div class="container-fluid">
-			<!-- Brand and toggle get grouped for better mobile display -->
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#">The Gourmet Kitchen</a>
-			</div>
-
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav">
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
-						<ul class="dropdown-menu">
-							<li><a href="#">The Gourmet Kitchen</a></li>
-							<li><a href="#">Meet the team</a></li>
-							<li><a href="#">Our Story</a></li>
-						</ul>
-					</li>
-					<li><a href="#">Media</a></li>
-					<li><a href="#">Our Partners</a></li>
-					<li><a href="#">Workshops</a></li>
-					<li><a href="#">Contact Us</a></li>
-				</ul>
-			</div><!-- /.navbar-collapse -->
-		</div><!-- /.container-fluid -->
-	</nav>
-	<!-- after navbar -->
+{% extends 'kitchen/base.html' %}
+{% load static %}
+{% block content %}
 
 	<div class="row mainCard center-block">
 		<div class="col-sm-12">
+			{% if is_wrong %}
+			<h1>{{error_message}}</h1>
+			{% else %}
 			<h1>Edit Recipe</h1>
-			<form class="form-horizontal">
+			<form class="form-horizontal"  method="post" action="/acceptEditRec" enctype='multipart/form-data'>
+				{% csrf_token %}
 				<div class="form-group">
 					<label for="recName" class="col-sm-2 control-label">Name of Recipe:</label>
 					<div class="col-sm-10">
-						<input type="text" class="form-control" id="recName" placeholder="Name of Recipe" required>
+						<input type="text" class="form-control" id="recName" placeholder="Name of Recipe" required name="recName">
+					</div>
+				</div>
+				<input type="hidden" name="recNo" value="{{rec_no}}" id="recNo">
+				<div class="form-group">
+					<label for="recCategory" class="col-sm-2 control-label">Category:</label>
+					<div class="col-sm-10">
+						<select class="form-control" name="recCategory" id="recCategory" required>
+							<option selected disabled>Select</option>
+							<option value="Indian">Indian</option>
+							<option value="Chinese">Chinese</option>
+							<option value="Italian">Italian</option>
+							<option value="Mexican">Mexican</option>
+							<option value="Thai">Thai</option>
+							<option value="Other">Other</option>
+						</select>
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="recDesc" class="col-sm-2 control-label">Description:</label>
 					<div class="col-sm-10">
-						<textarea class="form-control" id="recDesc" rows="7" cols="30" placeholder="Describe your recpie" required></textarea>
+						<input type="text" class="form-control" id="recDesc" placeholder="Short Description" required name="recDesc">
+					</div>
+
+				</div>
+				<div class="form-group">
+					<label for="recCal" class="col-sm-2 control-label">Calories:</label>
+					<div class="col-sm-10">
+						<input type="number" class="form-control time-sd" id="recCal" placeholder="Calories" required name="recCal">
 					</div>
 				</div>
 				<div class="form-group">
-					<label for="recDesc" class="col-sm-2 control-label">Ingredients:</label>
+					<label for="recDir" class="col-sm-2 control-label">Directions:</label>
+					<div class="col-sm-10">
+						<textarea class="form-control" id="recDir" rows="7" cols="30" placeholder="Directions" required name="recDir">{{rec_dir}}</textarea>
+					</div>
+				</div>
+				<div class="form-group">
+					<label class="col-sm-2 control-label">Ingredients:</label>
 					<div class="col-sm-offset-2">
 						<ul class="checkbox-grid">
+							<!-- Here -->
+							{% for ing in ings %}
 							<li class="checkbox">
-								<input type="checkbox" id="ing1" name="ing1"/>
-								<label for="ing1">Ingredient 1</label>
+								<input type="checkbox" class="newOnes" id="{{ing}}"/>
+								<label for="ing13">{{ing}}</label>
 							</li>
-							<li class="checkbox">
-								<input type="checkbox" id="ing2" name="ing2"/>
-								<label for="ing2">Ingredient 2</label>
-							</li>
-							<li class="checkbox">
-								<input type="checkbox" id="ing3" name="ing3"/>
-								<label for="ing3">Ingredient 3</label>
-							</li>
-							<li class="checkbox">
-								<input type="checkbox" id="ing4" name="ing4"/>
-								<label for="ing4">Ingredient 4</label>
-							</li>
-							<li class="checkbox">
-								<input type="checkbox" id="ing5" name="ing5"/>
-								<label for="ing5">Ingredient 5</label>
-							</li>
-							<li class="checkbox">
-								<input type="checkbox" id="ing6" name="ing6"/>
-								<label for="ing6">Ingredient 6</label>
-							</li>
-							<li class="checkbox">
-								<input type="checkbox" id="ing7" name="ing7"/>
-								<label for="ing7">Ingredient 7</label>
-							</li>
-							<li class="checkbox">
-								<input type="checkbox" id="ing8" name="ing8"/>
-								<label for="ing8">Ingredient 8</label>
-							</li>
-							<li class="checkbox">
-								<input type="checkbox" id="ing9" name="ing9"/>
-								<label for="ing9">Ingredient 9</label>
-							</li>
-							<li class="checkbox">
-								<input type="checkbox" id="ing10" name="ing10"/>
-								<label for="ing10">Ingredient 10</label>
-							</li>
-							<li class="checkbox">
-								<input type="checkbox" id="ing11" name="ing11"/>
-								<label for="ing11">Ingredient 11</label>
-							</li>
-							<li class="checkbox">
-								<input type="checkbox" id="ing12" name="ing12"/>
-								<label for="ing12">Ingredient 12</label>
-							</li>
-							<li class="checkbox">
-								<input type="checkbox" id="ing13" name="ing13"/>
-								<label for="ing13">Ingredient 13</label>
-							</li>
-							<li class="checkbox">
-								<input type="checkbox" id="ing14" name="ing14"/>
-								<label for="ing14">Ingredient 14</label>
-							</li>
-							<li class="checkbox">
-								<input type="checkbox" id="ing15" name="ing15"/>
-								<label for="ing15">Ingredient 15</label>
-							</li>
-							<li class="checkbox">
-								<input type="checkbox" id="ing16" name="ing16"/>
-								<label for="ing16">Ingredient 16</label>
-							</li>
+							{% endfor %}
 						</ul>
+					</div>
+				</div>
+				<input type="hidden" id="ingAll" value="" name="ingAll">
+				<div class="form-group">
+					<label for="other" class="col-sm-2 control-label">New Ingredient:</label>
+					<div class="col-sm-10">
+						<input type="text" class="form-control time-sd" id="other">
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="time" class="col-sm-2 control-label">Time Required:</label>
 					<div class="col-sm-10">
-						<input type="number" min="0" max="100" default="0" class="form-control time-sd" id="hrs" required><span class="time-sd time-txt">hrs</span>
-						<input type="number" min="0" max="59" class="form-control time-sd" id="mins" required><span class="time-sd time-txt">mins</span>
+						<input type="number" min="0" max="100" default="0" class="form-control time-sd" id="recHr" required name="recHr"><span class="time-sd time-txt">hrs</span>
+						<input type="number" min="0" max="59" class="form-control time-sd" id="recMin" required name="recMin"><span class="time-sd time-txt">mins</span>
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="imgUpload" class="col-sm-2 control-label">Image:</label>
 					<div class="col-sm-10">
 						<div>
-							<img src="chicken.jpg" class="thumbnail" id="currentImg">
+							<img src="{{MEDIA_URL}}{{rec_img}}" class="thumbnail" id="currentImg">
 						</div>
-						<input type="file" class="form-control" id="imgUpload" accept="image/*">
+						<input type="file" class="form-control" id="imgUpload" accept="image/*" name="imgUpload">
 					</div>
 				</div>
 				<div class="form-group">
 					<div class="col-sm-offset-2 col-sm-10">
-						<button type="submit" class="btn btn-success">Save</button>
+						<button type="submit" id="submitButton" class="btn btn-success">Save</button>
 					</div>
 				</div>
 			</form>
 
 		</div>
 	</div>
+
 	<script type="text/javascript">
-		$("#recName").val("Current Name");
-		$("#recDesc").val("Current Description");
-		$(".time-sd")[0].value = 1;
-		$(".time-sd")[2].value = 20;
-		$("#ing5").prop("checked",true);
-		$("#ing8").prop("checked",true);
-		$("#ing2").prop("checked",true);
-		$("#ing13").prop("checked",true);
 		$("#imgUpload").change(function(e) {
 
 			for (var i = 0; i < e.originalEvent.srcElement.files.length; i++) {
@@ -172,9 +106,60 @@
 				reader.onloadend = function() {
 					$("#currentImg").attr("src",reader.result);
 				}
+				$("#currentImg").show();
 				reader.readAsDataURL(file);
 			}
 		});
 	</script>
-</body>
-</html>
+
+	<script type="text/javascript">
+	var others="";
+		$('#other').keypress(function (e) {
+				var key = e.which;
+ 			if(key == 13)  // the enter key code
+  		{
+				e.preventDefault();
+				var toadd = $('#other').val();
+				if(toadd==""){}
+				else{
+				var pt1 = '<li class="checkbox"><input type="checkbox" class="newOnes" id="'
+				var pt2='"/><label for="ing13">'
+				var pt3 = '</label></li>'
+				$('.checkbox-grid').append(pt1+toadd+pt2+toadd+pt3);
+				$('#other').val('');
+				var newId="#"+toadd;
+				$(newId).prop("checked",true);
+			}
+  		}
+
+});
+
+$('#submitButton').click(function(e){
+	var allNew = $('.newOnes');
+	var finalIng = "";
+	for(i=0;i<allNew.length;i++){
+		if(allNew[i].checked == true){
+			console.log(allNew[i].id);
+			finalIng+="/element/"+allNew[i].id;
+		}
+	}
+	console.log(finalIng);
+	$('#ingAll').attr('value',finalIng);
+});
+	</script>
+
+<script>
+$('#recName').val("{{rec_name}}");
+$('#recDesc').val("{{rec_desc}}");
+$('#recCal').val("{{rec_cal}}");
+$('#recHr').val({{rec_time_hr}});
+$('#recMin').val({{rec_time_min}});
+$('#recCategory').val("{{rec_category}}");
+{% for ing in ings %}
+$('#{{ing}}').prop("checked",true);
+{% endfor %}
+</script>
+
+{% endif %}
+<link rel="stylesheet" href="{% static "kitchen/new_rec.css" %}">
+{% endblock %}
