--- a/gourmet/templates/kitchen/index.html
+++ b/gourmet/templates/kitchen/index.html
@@ -1,31 +1,71 @@
 {% extends 'kitchen/base.html' %}
 {% load static %}
 {% block content %}
-	<h1>The Gourmet Kitchen</h1>
-	<div class="row">
-		<div class="col-xs-12 col-md-4 col-sm-12 allCol">
-		</div>
-		<div class="col-xs-12 col-md-4 col-sm-6 allCol">
-			<div class="toppers topRecipe">
-				<div class="thumbnail">
-					<h2 class="headRec">Recipe of the Month</h2>
-					<img src="{% static "kitchen/cake.jpg" %}" width="100%" height="100%">
-					<h2 class="recName">[Recipe.Name]</h2>
+  <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
+  <section class="jumbotron">
+    <div class="container">
+      <div class="row text-center">
+        <h2>The Gourmet Kitchen</h2>
+        <h3>Your one stop culinary destination to learn<br>how to whip up recipes like a chef!</h3>
+       <!--  <a class="btn btn-secondary btn-lg" href="#" role="button">See All</a> -->
+      </div>
+    </div>
+  </section>
+  <style type="text/css">
+  	.jumbotron{
+  		background-image: url('{% static "kitchen/back.png" %}');
+  	}
+  </style>
+  <section class="container text-center">
+    <h2>Top Rated Recipes</h2><br>
+    <div class="row">
+      <div class="col-sm-4">
+        <p></p>
+        <img src="https://images.pexels.com/photos/5928/salad-healthy-diet-spinach.jpg?h=350&auto=compress&cs=tinysrgb">
+      </div>
+      <div class="col-sm-4">
+        <p></p>
+        <img src="https://images.pexels.com/photos/566566/pexels-photo-566566.jpeg?h=350&auto=compress&cs=tinysrgb">
+      </div>
+      <div class="col-sm-4">
+        <p></p>
+        <img src="https://images.pexels.com/photos/5928/salad-healthy-diet-spinach.jpg?h=350&auto=compress&cs=tinysrgb">
+      </div>
+      <div class="col-sm-4">
+        <p></p>
+        <img src="https://images.pexels.com/photos/566566/pexels-photo-566566.jpeg?h=350&auto=compress&cs=tinysrgb">
+      </div>
+      <div class="col-sm-4">
+        <p></p>
+        <img src="https://images.pexels.com/photos/5928/salad-healthy-diet-spinach.jpg?h=350&auto=compress&cs=tinysrgb">
+      </div>
+       <div class="col-sm-4">
+        <p></p>
+        <img src="https://images.pexels.com/photos/566566/pexels-photo-566566.jpeg?h=350&auto=compress&cs=tinysrgb">
+      </div>
+        <div class="row text-center">
+      <a class="btn btn-secondary" href="#" data-toggle="modal" data-target="#exampleModalCenterCatalogue">View Complete Catalogue</a>
+    </div>
+
+    <div class="modal fade" id="exampleModalCenterCatalogue" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div>
+						<ul>
+							<button type="button">Indian</button>
+							<li>Chinese</li>
+							<li>Italian</li>
+							<li>Mexican</li>
+							<li>Thai</li>
+							<li>Other</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
-		<div class="col-xs-12 col-md-4 col-sm-6 allCol">
-			<div class="toppers topChef">
-				<div class="thumbnail">
-					<h2 class="headChef">Chef of the Month</h2>
-					<img src="{% static "kitchen/adult.jpg" %}" width="100%" height="100%">
-					<h2 class="chefName">[Chef Name]</h2>
-				</div>
-			</div>
-		</div>
-	</div>
-
-
-	<link rel="stylesheet" href="{% static "kitchen/index.css" %}">
-
-	{% endblock %}
+	</div> <!--  modal end -->
+    </div>
+  </section>
+  <link rel="stylesheet" href="{% static "kitchen/index.css" %}">
+ {% endblock %}
