Just before leaving

--- a/gourmet/templates/kitchen/profile_chef.html
+++ b/gourmet/templates/kitchen/profile_chef.html
@@ -60,7 +60,7 @@
   </div>
 
 
-{% if user_about %}
+{% if is_self %}
 <!-- Edit Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
