--- a/gourmet/static/kitchen/profile.css
+++ b/gourmet/static/kitchen/profile.css
@@ -268,3 +268,149 @@ a {
   font-size: 1.5em;
   margin-bottom: 20px;
 }
+
+
+
+
+
+
+
+
+
+
+/* For cards */
+
+.flip-card {
+  background-color: transparent;
+  width: 330px;
+  height: 280px;
+  perspective: 1000px;
+  margin-bottom:40px;
+  margin-left:20px;
+
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+
+    }
+
+
+.flip-card-back {
+  background-color: #fce8ef;
+  color: black;
+  transform: rotateY(180deg);
+  border:solid black;
+}
+
+
+
+ul {
+      list-style: none;
+      margin: 0.5em 0 0;
+      padding: 0;
+      li {
+        display: inline-block;
+        margin-left: 1em;
+        line-height: 1em;
+        &:first-child {
+          margin-left: 0;
+        }
+
+        .icon {
+            vertical-align: bottom;
+        }
+
+        span:nth-of-type(2) {
+          margin-left: 0.5em;
+          font-size: 0.8em;
+          font-weight: 300;
+          vertical-align: middle;
+          color: #838689;
+        }
+      }
+    }
+
+
+    .media {
+  width:100%;
+  font-size:1em;
+  color:#555;
+  padding-bottom:15px;
+  text-align: left;
+  vertical-align: left;
+  line-height: 10px;
+  border-left:0px;
+  border-right:0px;
+  padding-left:0px;
+  padding-right:0px;
+
+
+}
+.media li {
+  display:inline-block;
+  padding:0 7px;
+
+}
+
+
+  .icon {
+      display: inline;
+      display: inline-block;
+      background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/203277/recipe-card-icons.svg);
+      background-repeat: no-repeat;
+  }
+
+  .icon-calories,.icon-calories\:regular {
+      background-position: 0 0;
+      width: 16px;
+      height: 19px;
+  }
+
+  .icon-clock,.icon-clock\:regular {
+      background-position: 0 -19px;
+      width: 20px;
+      height: 20px;
+  }
+
+  .icon-level,.icon-level\:regular {
+      background-position: 0 -39px;
+      width: 16px;
+      height: 19px;
+  }
+
+  .icon-play,.icon-play\:regular {
+      background-position: 0 -58px;
+      width: 21px;
+      height: 26px;
+  }
+
+  .icon-users,.icon-users\:regular {
+      background-position: 0 -84px;
+      width: 18px;
+      height: 18px;
+  }
+}
