--- a/gourmet/templates/kitchen/profile_user.html
+++ b/gourmet/templates/kitchen/profile_user.html
@@ -37,7 +37,7 @@
 <button type="button" class="btn" id="searchButton" data-toggle="modal" data-target="#mod2" >Search Recipe</button>
 
 <div class="row">
-{% for rec_name, rec_desc, rec_hr, rec_min, rec_url, rec_img in recs %}
+{% for rec_name, rec_desc, rec_hr, rec_min, rec_url, rec_img, rec_cal in recs %}
 <div class="col-xs-12 col-md-4 col-sm-6">
 <div class="flip-card"  onclick="location.href='{{rec_url}}'">
 <div class="flip-card-inner">
