--- a/gourmet/templates/kitchen/base.html
+++ b/gourmet/templates/kitchen/base.html
@@ -26,7 +26,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li class="dropdown">
-              <li><a href="#">Meet the team</a></li>
+              <li><a href="/meet">Meet the team</a></li>
           </li>
           <li><a href="#">Feedback</a></li>
 					<li><a href="#">Contact Us</a></li>
